--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,16 @@ body {
   width: 80%;
   height: auto;
 }
+
+
+.cNoFound{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+.NoFoundpage{
+  width: 75%;
+  border-radius: 30px;
+  margin: 10px;
+}
