Se agrego menu Movil y se mejoro el filtro de yugifind

--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -6,5 +6,18 @@
 
 
     .active{
-        color: blueviolet;
+        color: rgb(180, 119, 236);
     }
+
+img.logo{
+    width: 40%;
+    height: auto;
+}
+
+
+ 
+element.style {
+}
+.modal-backdrop.show {
+    display: none;
+}
