--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body {
 }
 
 .logo {
-  margin-top: 2em;
+  margin-top: 1rem;
 
   height: 90px;
   display: flex;
@@ -54,12 +54,67 @@ body {
 
 .cNoFound{
   display: flex;
+  background-color: rgba(65, 225, 217, 0.411);
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  width: 55%;
+  border-radius: 50px;
+  flex-direction: column;
+
 }
 .NoFoundpage{
-  width: 75%;
+  width: 100%;
   border-radius: 30px;
-  margin: 10px;
+  margin-top: -14px;
+}
+.intenta{
+  margin-top: -10%;
+  text-align: center;
+}
+
+
+#root div.navBarMovil > nav > div > button{
+  background-color:#0d7373;
+  width: 100px;
+  height: 50px;
+}
+#root div.navBarMovil > nav > div > button:hover{
+  background-color:hsl(180, 88%, 48%);
+}
+
+.offcanvas-body{
+  background-color: rgb(74, 98, 105);
+  color: white;
+}
+.offcanvas-header{
+  background-color: #0d7373;
+  color: white;
+}
+a.nav-link{
+  color: white;
+}
+.navbar-brand{
+  color: white;
+  text-align: center;
+}
+#offcanvasNavbar{
+  width: 60%;
+}
+.navbar-nav .nav-link.active, .navbar-nav .show>.nav-link{
+  color :#730d37;
+}
+.offcanvas-header .btn-close:hover{
+  background:none;
+}
+
+
+.img-logo{
+  width:200px
+}
+
+
+@media (max-width: 768px){
+  div.logo{
+    display: none;
+  }
 }
