--- a/src/components/contador/styles/Contador.css
+++ b/src/components/contador/styles/Contador.css
@@ -14,3 +14,9 @@
 .botones{
     display: flex;
 }
+@media (max-width: 500px){
+    .contador{
+        min-width: 20%;
+    height:1.6em;
+    }
+}
