--- a/src/components/calculadora/styles/Calculadora.css
+++ b/src/components/calculadora/styles/Calculadora.css
@@ -1,86 +1,92 @@
-.contenedor-calculadora{
-    margin-top: 1em;
-    width: 400px;
-    height: 600px;
-    padding: 14px;
-    background-color: #0d7373;
-    border-radius: 20px;
-    border: 5px solid #fff;
+.contenedor-calculadora {
+  margin-top: 1em;
+  width: 400px;
+  height: 600px;
+  padding: 14px;
+  background-color: #0d7373;
+  border-radius: 20px;
+  border: 5px solid #fff;
 }
-.fila{
-    margin:4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.boton-contenedor{
-    height: 83px;
-    display: flex;
-    flex: 1 1; 
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    font-size: 1.5em;
-    background-color: black;
-    color: white;
-    border-radius: 25px;
-    border: 2px solid #fff;
-    margin: 4px;
-    cursor:pointer;
-    user-select: none;
+.fila {
+  margin: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.boton-contenedor:hover{
-    background-color: #fff;
-    color: black;
-
+.boton-contenedor {
+  height: 83px;
+  display: flex;
+  flex: 1 1;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  background-color: black;
+  color: white;
+  border-radius: 25px;
+  border: 2px solid #fff;
+  margin: 4px;
+  cursor: pointer;
+  user-select: none;
 }
 
- .operador{
-    background-color: green;
- }
- .operador:hover{
-    background-color: rgb(27, 83, 13);
-    color: rgb(235, 235, 235);
- }
+.boton-contenedor:hover {
+  background-color: #fff;
+  color: black;
+}
 
- .input{
-    height: 75px;
-    border-radius: 50px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    font-weight: bold;
-    font-size: 1.5em;
-    background-color: #0a0a0a;
-    color: white;
-    padding: 11px;
-    padding-right: 30px;
-    margin: 2px solid #fff;
-    box-shadow: -1px 4px 1px 1px white;
- }
+.operador {
+  background-color: green;
+}
+.operador:hover {
+  background-color: rgb(27, 83, 13);
+  color: rgb(235, 235, 235);
+}
 
- .boton-clear{
-    height: 80px;
-    font-size: 1.6em;
-    display: flex;
-    flex: 1;
-    background-color: #e42828;
-    margin-top: 8px;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    color: #fff;
-    border: 2px solid #fff;
-    cursor: pointer;
-    border-radius: 25px;
- }
+.input {
+  height: 75px;
+  border-radius: 50px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  background-color: #0a0a0a;
+  color: white;
+  padding: 11px;
+  padding-right: 30px;
+  margin: 2px solid #fff;
+  box-shadow: -1px 4px 1px 1px white;
+}
 
-    .boton-clear:hover{
-        background-color: #4d0a0a;
-        color: #d4d4d4;
-    }
+.boton-clear {
+  height: 80px;
+  font-size: 1.6em;
+  display: flex;
+  flex: 1;
+  background-color: #e42828;
+  margin-top: 8px;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #fff;
+  border: 2px solid #fff;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
+.boton-clear:hover {
+  background-color: #4d0a0a;
+  color: #d4d4d4;
+}
+
+@media (max-width: 500px) {
+  .contenedor-calculadora {
+    width: 80%;
+    height: auto;
+  }
+  .boton-contenedor{
+    height: auto;}
+}
