--- a/src/components/contador/styles/Button.css
+++ b/src/components/contador/styles/Button.css
@@ -1,6 +1,6 @@
 button{
-    width: 250px;
-    height : 80px;
+    min-width: 20%;
+    height: 124px;
     font-size: 2em;
     font-family: Roboto,sans-serif;
     font-weight: bold;
@@ -17,8 +17,16 @@ button:hover{
 }
 .boton-click{
 background-color: #002eae;
+width: auto;
+height: auto;
+padding: 8px;
+overflow:hidden;
 }
 
 .boton-reiniciar{
     background-color: #0d7373;
+    width: auto;
+    height: auto;
+    padding: 8px;
+    overflow:hidden;
 }
