--- a/src/components/homePage/stilos.css
+++ b/src/components/homePage/stilos.css
@@ -12,7 +12,10 @@ h1{
     font-family: 'Conten', sans-serif;
     font-size: 30px;
     font-weight: 600;
-    color: #f00;
     margin: 0;
     padding: 20px;
+  }
+
+  img.img{
+    border-radius: 30px;
   }
